--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.3.6",
     "nodemon": "^2.0.22",
-    
+    "ejs": "^3.1.9",
     "express": "^4.18.2"
   }
 }
